<resources>
    <string name="app_name">CampusConnect</string>
    <string name="title_home">Главная</string>
    <string name="title_card">Карта</string>
    <string name="title_events">Мероприятия</string>
    <string name="title_create">Создать</string>
    <string name="title_profile">Профиль</string>
    <string name="button_sport">Спорт</string>
    <string name="button_study">Учёба</string>
    <string name="button_entertainment">Досуг</string>
    <string name="event_take_part_button">Участвую!</string>
    <string name="button_all">Все</string>
    <string name="login_button">Вход</string>
    <string name="register_button">Регистрация</string>
    <string name="createEventOrCowork_button">Создай!</string>
    <string name="create_type_text">Выбери тип занятия</string>
    <string name="create_event">Мероприятие</string>
    <string name="create_coworking">Коворкинг</string>
    <string name="create_event_type">Выберите тип мероприятия</string>
    <string name="create_event_name">Введите название мероприятия</string>
    <string name="create_event_description">Введите описания мероприятия</string>
    <string name="create_event_date">Выберите дату</string>
    <string name="create_event_date_button_picker">Выбрать</string>
    <string name="create_event_date_button_picker_start">Начало</string>
    <string name="create_event_date_button_picker_end">Конец</string>
    <string name="create_booking_button">Забронировать</string>
    <string name="welcome_text">С возвращением!</string>
    <string name="event_profile_title_text">Ваши события</string>
    <string name="slots_title_text">Выберите время</string>
</resources>