<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.cremenb.campus_connect.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="dev.cremenb.campus_connect.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_registration"
            app:destination="@id/navigation_registration" />
    </fragment>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="dev.cremenb.campus_connect.ui.registration.RegistrationFragment"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_navigation_registration_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_card"
        android:name="dev.cremenb.campus_connect.ui.card.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="dev.cremenb.campus_connect.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" >
        <action
            android:id="@+id/action_navigation_events_to_navigation_event_comment"
            app:destination="@id/navigation_event_comment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create"
        android:name="dev.cremenb.campus_connect.ui.createEventAndCoworking.CreateEventAndCoworkingFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create_event_and_coworking" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="dev.cremenb.campus_connect.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_events"
            app:destination="@id/navigation_events" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event_comment"
        android:name="dev.cremenb.campus_connect.ui.eventComment.EventCommentFragment"
        tools:layout="@layout/fragment_event_comment" >
        <action
            android:id="@+id/action_navigation_event_comment_to_navigation_events"
            app:destination="@id/navigation_events" />
    </fragment>

</navigation>