<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEventOrCowork_button"
        android:textColor="@color/primary_black_grey"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat_bold"/>

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_type_text"
        android:textColor="@color/primary_black_grey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_bold"/>

    <Button
        android:id="@+id/button_coworking"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textSize="9sp"
        android:backgroundTint="@color/primary_orange_200"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/create_coworking"
        android:textColor="@color/white"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/text_type"
        android:elevation="4dp"/>

    <Button
        android:id="@+id/button_event"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:textSize="9sp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/create_event"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/text_type"
        android:elevation="4dp"/>

    <TextView
        android:id="@+id/text_event_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_type"
        android:textColor="@color/primary_black_grey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/button_event"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_bold"/>

    <HorizontalScrollView
        android:id="@+id/event_type_scroll"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="14dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/text_event_type">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_sport"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:textSize="9sp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_sport"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/button_sport"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/button_study"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:textSize="9sp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_bell"
                android:backgroundTint="@color/primary_black_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/button_study"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/button_entertainment"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:textSize="9sp"
                android:drawableLeft="@drawable/ic_entertainment"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/button_entertainment"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                android:elevation="4dp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/text_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_name"
        android:textColor="@color/primary_black_grey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/event_type_scroll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_bold"/>

    <EditText
        android:id="@+id/event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="Название"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_event_name" />

    <TextView
        android:id="@+id/text_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_description"
        android:textColor="@color/primary_black_grey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/event_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_bold"/>

    <EditText
        android:id="@+id/event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="Описание"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_event_description" />

    <TextView
        android:id="@+id/text_event_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_date"
        android:textColor="@color/primary_black_grey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/event_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_bold"/>

    <Button
        android:id="@+id/button_date_picker"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textSize="9sp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/create_event_date_button_picker"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/text_event_data"
        android:elevation="4dp"/>

    <EditText
        android:id="@+id/event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="Дата и время"
        android:enabled="false"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_date_picker" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/event_date"/>

</androidx.constraintlayout.widget.ConstraintLayout>